--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h2>What can you make with 475,000 building blocks?</h2>
       <p>The npm registry hosts almost half a million packages of free, reusable code - the largest software registry in the world.</p>
     </div>
-  <div class="3blocks"> 
+  <div class="threeblocks"> 
     <div class="blocks blocks2"><img src="images/binoculars.svg">
     <h3>Find</h3>
       <p>Libraries like <a href="#"> Jquery,</a> <a href="#"> Bootstrap,</a> <a href="#"> React,</a> and <a href="#"> Angular,</a> and components from frameworks such as <a href="#"> Ember</a></p>
